  to the saturated point.
  - pressure head equation is first solved using Picard formulation until the
  Picard tolerance is reached (specified in system/fvSolution) and then equation
  is solver using Newton method until the Newton tolerance.
  - the equations residual is now signed and under-relaxation occurs only when
  residual increases without changing sign
  - timestep is managed using time scheme for truncation error. Only the Euler
  timescheme is currently handled for the pressure head equation but 2nd order
  schemes can be used for C equation (see tutorials)

### Libraries

- numericalMethods

  - new Jacobian Matrix class for handling FD Newton algorithm (finite
  difference method, for debugging only)

### Bug fixes

- solved ambiguous calls for compatibility with CLANG and OSX
- fix dimensions in ToddNo.H
- fix interpolateFactor for event value computation
- 3rd time derivative computed on potential (instead of hwater) to avoid
instabilities when hwater tends to 0
- fix retard coefficient for unsaturated (depends on saturation flow)
- handle correctly dry cells for stationaryGroundwater2DFoam solver

************************
*** PMFv1912
*** Multi-species transport and timestep management
************************

### Solvers

- Global:

  -patchEvent are now automatically read by solvers inside fields file
  -keyword "eventTimeTracking" is used to constraint the solver to
  explictly compute solution at event time (source/patch events)

- groundwaterFoam

  - The non-convergence of the Picard's algorithm now forces the solver to
  recompute the time iteration reducing the time step
  - add specific storage term (Ss) to the Richards' formulation
  - adding by default the mass-conservative terms to head pressure equation
  (mixed-formulation). The old head-pressure formulation can be now obtained
  adding "massConservative false;" in transportProperties

- groundwater2DFoam

  - solver adapted to handle uniform or non-uniform infiltration event (also